cabal-version:       >=2.0

name:                ctype
version:             0.1.0.1
license-file:        LICENSE
author:              mlugg
maintainer:          mlugg@mlugg.co.uk
build-type:          Simple

executable ctype
  main-is:             Main.hs
  build-depends:       base ^>=4.14.3.0, megaparsec ^>=9.2.0, text ^>=2.0, parser-combinators ^>=1.3.0
  default-language:    Haskell2010
